[package]
name = "wei-hardware"
version = "0.1.0"
edition = "2021"
description = "wei hardware"
documentation = "https://github.com/zuiyue-com/wei-hardware"
homepage = "https://github.com/zuiyue-com/wei-hardware"
license = "MIT OR Apache-2.0"

[dependencies]
wei-log = "0.2.10"
wei-env = "0.2.13"
wei-run ={ path = "../wei-run" }
tokio = { version = "1.28.1", features = ["full"] }
sysinfo = "0.29.0"
sys-info = "0.9.1"
reqwest = "0.11.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
uuid = { version = "1.3.3", features = ["v4"] }
os_info = "3.7.0"