[package]
name = "wei-hardware"
version = "0.1.0"
edition = "2021"
description = "wei hardware"
documentation = "https://github.com/zuiyue-com/wei-hardware"
homepage = "https://github.com/zuiyue-com/wei-hardware"
license = "MIT OR Apache-2.0"

[dependencies]
wei-log = "0.2.10"
wei-env = "0.2.13"
wei-single = "0.3.6"
wei-run = { path = "../wei-run" }
wei-api = { path = "../wei-api" }
wei-file = { path = "../wei-file" }
wei-windows = { path = "../wei-windows" }
pnet = "0.34.0"
regex = "1.10.3"
tokio = { version = "1.28.1", features = ["full"] }
sysinfo = "0.30.12"
sys-info = "0.9.1"
reqwest = "0.11.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
uuid = { version = "1.3.3", features = ["v4"] }
os_info = "3.7.0"
hostname = "0.3.1"
uptime_lib = "0.3"

[target.'cfg(target_os = "linux")'.dependencies.openssl-sys]
version = "0.9"
features = ["vendored"]

